--- a/css/main.css
+++ b/css/main.css
@@ -63,3 +63,9 @@
 .MathJax_Display {
 	text-align: left !important;
 }
+
+canvas,
+.mathbox-overlays {
+	width: 100% !important;
+	height: 100% !important;
+}
