--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 #main {
 	min-height: 100vh;
-	background-color: #8cffa0;
+	background-color: #336666;
 }
 
 .card-body {
@@ -10,7 +10,7 @@
 .latex-display {
 	height:75px;
 	padding:10px;
-	background-color: #9bff37;
+	background-color: #ffffff;
 	border-radius:4px;
 }
 
